--- a/sixerrapp/templates/base.html
+++ b/sixerrapp/templates/base.html
@@ -2,9 +2,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8"
+    <meta charset="utf-8">
     <title>Sixerr App</title>
     <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}"type="image/x-icon" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/app.css' %}"/>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
+    
   </head>
   <body>
       <div>
